navbar fix (no jumping when hover)

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -11,24 +11,8 @@
     /* -webkit-backdrop-filter: blur(15px); */
 }
 
-
-/* @keyframes backgroundAnimation {
-    0% {
-        letter-spacing: 1em;
-        transform: translateZ(800px);
-        opacity: 0;
-    }
-    40% {
-        opacity: 0.6;
-    }
-    100% {
-        transform: translateZ(0);
-        opacity: 1;
-    }
-} */
-
 .nav-link-user:hover {
-    font-size: 1.1rem;
+    transform: scale(1.1);
     /* text-shadow: 1px 1px 1px rgb(0, 0, 0); */
     /* box-shadow: 4px 4px 20px 2px #fbfafa; */
     /* background-color: #f90c0c; */
@@ -36,4 +20,10 @@
 
 a {
     cursor: pointer;
+}
+
+.nav-item {
+    width: fit-content;
+    white-space: nowrap;
+    text-align: center;
 }
